# Wiki-GRx-Gazebo

./: .gitignore  README.en.md  README.gitee.md  README.md  README_CN.md
src/rl_sim/: CMakeLists.txt  config.yaml  package.xml
src/rl_sim/include/: rl_sim.hpp
src/rl_sim/launch/: gazebo_gr1t1.launch  gazebo_gr1t2.launch
src/rl_sim/models/gr1t1/: walk_model_jit.pt
src/rl_sim/models/gr1t2/: stand_model_jit.pt
src/rl_sim/src/: rl_sim.cpp
